Fix: remove 100vw full-width to stop horizontal scroll in HM Container

--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -6,11 +6,16 @@
   box-sizing: border-box;
 }
 
+.editor-styles-wrapper .hm-container{
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
 .editor-styles-wrapper .hm-container.alignfull{
-  width: 100vw;
-  max-width: 100vw;
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
+  width: 100%;
+  max-width: none;
 }
 
 .hmpb-container__picker{
